--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,11 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.kevincylee.demo</groupId>
-	<artifactId>thymeleaf-jpa</artifactId>
+	<artifactId>spring-boot-thymeleaf-jpa</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>thymeleaf-jpa</name>
+	<name>spring-boot-thymeleaf-jpa</name>
 	<description>Demo project for Spring Boot</description>
 
 	<parent>
